feat: user registration & sql transaction
